--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         </header>
         <main class="main">
             <section class="get-started">
+                <div class="get-bg__background">
                 <div class="get-started__container">
                     <div class="get-started__content">
                         <div class="get-started__block-text block-text">
@@ -58,8 +59,10 @@
                         </div>
                     </div>
                 </div>
+            </div>
             </section>
             <section class="technikal">
+                <div class="tehnikal__background">
                 <div class="technikal__container">
                     <div class="technikal__content">
                         <div class="titel_teh">Берем на себя <span class="colortext">всю</span> техническую часть
@@ -110,6 +113,7 @@
                             </div>
                         </div>
 
+                    </div>
                     </div>
                 </div>
             </section>
@@ -176,8 +180,7 @@
                                 </nav>
                             </div>
                             <div class="scroller-up">
-                                <div class="scroler-up"><a href=""> <img src="img/pg1/scrollerup.svg" alt="вернуться в начало" class="scrolerup"></a></div>
-                            <div><a href="" class="scrolerup">вернуться в начало</a></div>
+                                <div class="scroler-up"><a href=""> <img src="img/pg1/Group4.svg" alt="вернуться в начало" class="scrolerup"></a></div>
                             </div>
                             <div class="footor_TG"><a href="https://www.google.com/"><img src="img/tggif.gif" alt="TG"
                                         width="54px" class="round"></a></div>
