--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
                                     Мы перезвоним вам в ближайшее время.
                                 </div>
                                 <form class="telegram-form">
-                                <input class="requir-input" type="text" placeholder="Имя"/></br>
-                                <input class="requir-input" type="phone" placeholder="+38 (___) ___-__-__"/></br>
-                                <div class="bc-border-button"> <button type="submit" class="bc-button">
+                                <input class="requir-input" name="name" type="text" placeholder="Имя" autocomplete="off/></br>
+                                <input class="requir-input" name="phone" type="phone" placeholder="+38 (___) ___-__-__" autocomplete="off/></br>
+                                <div class="bc-border-button submit"> <button type="submit" class="bc-button">
                                         Перезвоните мне </button>
                                 </div>
                              </form>
