--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
                                     Мы перезвоним вам в ближайшее время.
                                 </div>
                                 <form class="telegram-form">
-                                <input class="requir-input" name="name" type="text" placeholder="Имя" autocomplete="off/></br>
-                                <input class="requir-input" name="phone" type="phone" placeholder="+38 (___) ___-__-__" autocomplete="off/></br>
+                                <input class="requir-input" name="name" type="text" placeholder="Имя" autocomplete="off"/> </br>
+                                <input class="requir-input" name="phone" type="phone" placeholder="+38 (___) ___-__-__" autocomplete="off"/> </br>
                                 <div class="bc-border-button submit"> <button type="submit" class="bc-button">
                                         Перезвоните мне </button>
                                 </div>
