--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 <div class="header__menu menu">
                     <nav class="menu__body">
                         <ul class="menu__list">
-                            <li class="menu__item"><a href="" class="menu__link">Главная</a></li>
+                            <li class="menu__item"><a href="index.html" class="menu__link">Главная</a></li>
                             <li class="menu__item"><a href="" class="menu__link">О нас</a></li>
-                            <li class="menu__item"><a href="" class="menu__link">Контакты</a></li>
+                            <li class="menu__item"><a href="Contacts.html" class="menu__link">Контакты</a></li>
                         </ul>
                     </nav>
                 </div>
