--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
                                     </div>
                                     <div class="teh-block-text__body">
                                         <div class="teh-block-text__title">CRM-система</div>
-                                        <div class="teh-block-text"> <span class="nowrap"> Подключаем вас к удобной
-                                                CRM-системе</span></div>
+                                        <div class="teh-block-text">  Подключаем вас к удобной
+                                            <span class="nowrap">CRM-системе</span></div>
                                     </div>
                                 </div>
                                 <div class="abzac__container">
