--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                             <div class="requir-box">
                                 <div class="requir-box__content">
                                     <div class="requir_num">
-                                        <div class="num">1</div>
+                                        <div class="num" style="margin-left: 12px;">1</div>
                                         <div class="r-text">Ответственных людей, кто умеет работать </br>
                                             по обговоренному расписанию, без опозданий.
                                         </div>
