--- a/Contacts.html
+++ b/Contacts.html
@@ -27,7 +27,7 @@
                     <nav class="menu__body">
                         <ul class="menu__list">
                             <li class="menu__item"><a href="index.html" class="menu__link">Главная</a></li>
-                            <li class="menu__item"><a href="" class="menu__link">О нас</a></li>
+                            <li class="menu__item"><a href="About.html" class="menu__link">О нас</a></li>
                             <li class="menu__item"><a href="Contacts.html" class="menu__link">Контакты</a></li>
                         </ul>
                     </nav>
@@ -95,9 +95,9 @@
                             <div class="footer__menu">
                                 <nav class="fmenu__body">
                                     <ul class="fmenu__list">
-                                        <li class="fmenu__item"><a href="" class="fmenu__link">Главная</a></li>
-                                        <li class="fmenu__item"><a href="" class="fmenu__link">О нас</a></li>
-                                        <li class="fmenu__item"><a href="" class="fmenu__link">Контакты</a></li>
+                                        <li class="fmenu__item"><a href="index.html" class="fmenu__link">Главная</a></li>
+                                        <li class="fmenu__item"><a href="About.html" class="fmenu__link">О нас</a></li>
+                                        <li class="fmenu__item"><a href="Contacts.html" class="fmenu__link">Контакты</a></li>
                                     </ul>
                                 </nav>
                             </div>
