--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Главная</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&display=swap"
@@ -31,7 +31,7 @@
                     <nav class="menu__body">
                         <ul class="menu__list">
                             <li class="menu__item"><a href="index.html" class="menu__link">Главная</a></li>
-                            <li class="menu__item"><a href="" class="menu__link">О нас</a></li>
+                            <li class="menu__item"><a href="About.html" class="menu__link">О нас</a></li>
                             <li class="menu__item"><a href="Contacts.html" class="menu__link">Контакты</a></li>
                         </ul>
                     </nav>
@@ -177,9 +177,9 @@
                             <div class="footer__menu">
                                 <nav class="fmenu__body">
                                     <ul class="fmenu__list">
-                                        <li class="fmenu__item"><a href="" class="fmenu__link">Главная</a></li>
-                                        <li class="fmenu__item"><a href="" class="fmenu__link">О нас</a></li>
-                                        <li class="fmenu__item"><a href="" class="fmenu__link">Контакты</a></li>
+                                        <li class="fmenu__item"><a href="index.html" class="fmenu__link">Главная</a></li>
+                                        <li class="fmenu__item"><a href="About.html" class="fmenu__link">О нас</a></li>
+                                        <li class="fmenu__item"><a href="Contacts.html" class="fmenu__link">Контакты</a></li>
                                     </ul>
                                 </nav>
                             </div>
