--- a/About.html
+++ b/About.html
@@ -47,11 +47,11 @@
                 <div class="about__container">
                     <div class="about__content">
                         <div class="about__title">Call-центр <span> GreenFox</span>
-                            <div class="text">Мы, молодая компания GreenFox, более трёх лет 
-                                работаем в сфере телефонных продаж и обслуживании 
-                                горячих линий.  За время работы call-центра было 
-                                выполнено более 30 проектов. Наша комнания заботится 
-                                о качественном предоставлении услуг. Клиенты 
+                            <div class="text">Мы, молодая компания GreenFox, более трёх лет </br>
+                                работаем в сфере телефонных продаж и обслуживании</br> 
+                                горячих линий.  За время работы call-центра было</br> 
+                                выполнено более 30 проектов. Наша комнания заботится</br>
+                                о качественном предоставлении услуг. Клиенты</br> 
                                 call-центра – крупные компании СНГ. </div>
                         </div>
                         
@@ -63,12 +63,24 @@
                     <div class="partner__content">
                         <div class="partner__titel">Наши партнёры:
                             <div class="partner-logo">
-                                <img src="/img/pg2/scdank (2) 1.svg" alt="SCBank">
-                                <img src="/img/pg2/mts_img.svg" alt="MTC">
-                                <img src="/img/pg2/ivi_img 1.svg" alt="IVI">
-                                <img src="/img/pg2/alfa_img.svg" alt="Alfa">
-                                <img src="/img/pg2/magnitt-img.svg" alt="Magnit">
-                                <img src="/img/pg2/tinkoff_img.svg" alt="TIBank">
+                                <img src="/img/pg2/scdank (2) 1.svg" alt="SCBank" style="max-width: 385px;
+                                width: 100%;
+                                height: auto;">
+                                <img src="/img/pg2/mts_img.svg" alt="MTC" style="max-width: 385px;
+                                width: 100%;
+                                height: auto;">
+                                <img src="/img/pg2/ivi_img 1.svg" alt="IVI" style="max-width: 385px;
+                                width: 100%;
+                                height: auto;">
+                                <img src="/img/pg2/alfa_img.svg" alt="Alfa" style="max-width: 385px;
+                                width: 100%;
+                                height: auto;">
+                                <img src="/img/pg2/magnitt-img.svg" alt="Magnit" style="max-width: 385px;
+                                width: 100%;
+                                height: auto;">
+                                <img src="/img/pg2/tinkoff_img.svg" alt="TIBank" style="max-width: 385px;
+                                width: 100%;
+                                height: auto;">
                             </div>                           
                         </div>
                     </div>
