--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/sweetalert.min.css">
     
 
 </head>
@@ -148,7 +149,7 @@
                                 <div class="requir-text">Введите имя и телефон.</br>
                                     Мы перезвоним вам в ближайшее время.
                                 </div>
-                                <form class="telegram-form">
+                                <form action="post" class="telegram-form">
                                 <input class="requir-input" name="name" type="text" placeholder="Имя" autocomplete="off"/> </br>
                                 <input class="requir-input" name="phone" type="phone" placeholder="+38 (___) ___-__-__" autocomplete="off"/> </br>
                                 <div class="bc-border-button submit"> <button type="submit" class="bc-button">
@@ -203,6 +204,8 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="./main.js"></script>
+    <script src="js/sweetalert.min.js"></script>
+<script src="js/form.js"></script>
 </body>
 
 
