--- a/Contacts.html
+++ b/Contacts.html
@@ -11,6 +11,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/sweetalert.min.css">
 </head>
 <body>
     <div class="wrapper">
@@ -66,13 +67,13 @@
                                 <div class="requir-text">Введите имя и телефон.</br>
                                     Мы перезвоним вам в ближайшее время.
                                 </div>
-                                <form class="telegram-form">
-                                <input class="requir-input" name="name" type="text" placeholder="Имя" autocomplete="off"/> </br>
-                                <input class="requir-input" name="phone" type="phone" placeholder="+38 (___) ___-__-__" autocomplete="off"/> </br>
-                                <div class="bc-border-button submit"> <button type="submit" class="bc-button">
-                                        Перезвоните мне </button>
-                                </div>
-                             </form>
+                                <form action="post" class="telegram-form">
+                                    <input class="requir-input" name="name" type="text" placeholder="Имя" autocomplete="off"/> </br>
+                                    <input class="requir-input" name="phone" type="phone" placeholder="+38 (___) ___-__-__" autocomplete="off"/> </br>
+                                    <div class="bc-border-button submit"> <button type="submit" class="bc-button">
+                                            Перезвоните мне </button>
+                                    </div>
+                                 </form>
                             </div>
                         </div>
                     </div>
@@ -121,5 +122,7 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="./main.js"></script>
+    <script src="js/sweetalert.min.js"></script>
+<script src="js/form.js"></script>
 </body>
 </html>
