--- a/About.html
+++ b/About.html
@@ -1,135 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> О нас </title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <title>Загрузка фотографий</title>
+    <style>
+        /* Общие стили */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            padding: 20px;
+            max-width: 500px;
+            transition: background-color 0.3s, color 0.3s;
+        }
+
+        h1 {
+            margin-bottom: 20px;
+            transition: color 0.3s;
+        }
+
+        form {
+            margin-top: 20px;
+        }
+
+        label {
+            display: block;
+            margin-bottom: 5px;
+            font-weight: bold;
+            transition: color 0.3s;
+        }
+
+        input[type="text"], input[type="file"] {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 15px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            transition: background-color 0.3s, color 0.3s, border-color 0.3s;
+        }
+
+        button {
+            background-color: #28a745;
+            color: white;
+            padding: 10px 15px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        button:hover {
+            background-color: #218838;
+        }
+
+        /* Светлая тема (по умолчанию) */
+        .light-mode {
+            background-color: #f9f9f9;
+            color: #333;
+        }
+
+        /* Темная тема */
+        .dark-mode {
+            background-color: #222;
+            color: #fff;
+        }
+
+        .dark-mode input[type="text"], .dark-mode input[type="file"] {
+            background-color: #333;
+            color: #fff;
+            border-color: #555;
+        }
+
+        .dark-mode button {
+            background-color: #33a645;
+        }
+
+        /* Переключатель темы */
+        .theme-toggle {
+            margin-top: 20px;
+            display: flex;
+            align-items: center;
+        }
+
+        .theme-toggle label {
+            margin-right: 10px;
+        }
+
+        .theme-switch {
+            position: relative;
+            width: 50px;
+            height: 25px;
+            background-color: #ccc;
+            border-radius: 15px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        .theme-switch::after {
+            content: '';
+            position: absolute;
+            top: 2px;
+            left: 2px;
+            width: 21px;
+            height: 21px;
+            background-color: #fff;
+            border-radius: 50%;
+            transition: transform 0.3s;
+        }
+
+        .theme-switch.active {
+            background-color: #28a745;
+        }
+
+        .theme-switch.active::after {
+            transform: translateX(25px);
+        }
+    </style>
 </head>
+<body class="light-mode">
+    <h1>Загрузка фотографий</h1>
+    <form action="/upload" method="post" enctype="multipart/form-data">
+        <!-- Поле для unique_code -->
+        <label for="unique_code">Код гостя:</label>
+        <input type="text" id="unique_code" name="unique_code" placeholder="Введите код гостя" required>
 
-<body>
-    <div class="wrapper">
-        <header id="open" class="header">
-            <div id="close" class="header__container">
-                <a href="" class="header_logo">
-                    <picture>
-                        <source media="(max-width: 999px)" srcset="img/LOGOFOX.svg">
-                        <source media="(min-width: 1000px)" srcset="img/LOGO2.svg">
-                        <img src="img/LOGO2.svg" alt="Логотип" class="Logo">
-                    </picture>
-                </a>
-                <div class="header__menu menu">
-                    <nav class="menu__body">
-                        <ul class="menu__list">
-                            <li class="menu__item"><a href="index.html" class="menu__link">Главная</a></li>
-                            <li class="menu__item"><a href="About.html" class="menu__link">О нас</a></li>
-                            <li class="menu__item"><a href="Contacts.html" class="menu__link">Контакты</a></li>
-                        </ul>
-                    </nav>
-                </div>
-                <div class="header_button">
-                    <a href="https://www.google.com/"><img src="img/tggif.gif" alt="TG" width="54px" class="round"></a>
-                    <a href="" class="button button_TG"> +38 (072)171-86-91 <br>+38 (095) 101-39-09</a>
-                    <a href="#open" class="icon-menu"> <span></span></a>
-                    <a href="#close" class="close-icon-menu"></a>
-                </div>
-            </div>
-        </header>
-        <main class="main">
-            <section class="about">
-                <div class="about__container">
-                    <div class="about__content">
-                        <div class="about__title">Call-центр <span> GreenFox</span>
-                            <div class="text">Мы, молодая компания GreenFox, более трёх лет </br>
-                                работаем в сфере телефонных продаж и обслуживании</br> 
-                                горячих линий.  За время работы call-центра было</br> 
-                                выполнено более 30 проектов. Наша комнания заботится</br>
-                                о качественном предоставлении услуг. Клиенты</br> 
-                                call-центра – крупные компании СНГ. </div>
-                        </div>
-                        
-                    </div>
-                </div>
-            </section>
-            <selection class="partner">
-                <div class="partner__container">
-                    <div class="partner__content">
-                        <div class="partner__titel">Наши партнёры:
-                            <div class="partner-logo">
-                                <img src="/img/pg2/scdank (2) 1.svg" alt="SCBank" style="max-width: 385px;
-                                width: 100%;
-                                height: auto;">
-                                <img src="/img/pg2/mts_img.svg" alt="MTC" style="max-width: 385px;
-                                width: 100%;
-                                height: auto;">
-                                <img src="/img/pg2/ivi_img 1.svg" alt="IVI" style="max-width: 385px;
-                                width: 100%;
-                                height: auto;">
-                                <img src="/img/pg2/alfa_img.svg" alt="Alfa" style="max-width: 385px;
-                                width: 100%;
-                                height: auto;">
-                                <img src="/img/pg2/magnitt-img.svg" alt="Magnit" style="max-width: 385px;
-                                width: 100%;
-                                height: auto;">
-                                <img src="/img/pg2/tinkoff_img.svg" alt="TIBank" style="max-width: 385px;
-                                width: 100%;
-                                height: auto;">
-                            </div>                           
-                        </div>
-                    </div>
-                </div>
-            </selection>
-        </main>
-        <div>
-            <div>
-                <footer class="footer">
-                    <div class="footer__container">
-                        <div class="footer__content">
-                            <div><a href="" class="footer__logo">
-                                    <picture>
-                                        <source media="(max-width: 999px)" srcset="img/LOGOFOX.svg">
-                                        <source media="(min-width: 1000px)" srcset="img/LOGO2.svg">
-                                        <img src="img/LOGO2.svg" alt="Логотип" class="Logo">
-                                    </picture>
-                                </a>
-                            </div>
-                            <div class="footer__menu">
-                                <nav class="fmenu__body">
-                                    <ul class="fmenu__list">
-                                        <li class="fmenu__item"><a href="index.html" class="fmenu__link">Главная</a></li>
-                                        <li class="fmenu__item"><a href="About.html" class="fmenu__link">О нас</a></li>
-                                        <li class="fmenu__item"><a href="Contacts.html" class="fmenu__link">Контакты</a></li>
-                                    </ul>
-                                </nav>
-                            </div>
-                            <div class="scroller-up">
-                                <div class="scroler-up"><a href=""> <img src="img/pg1/Group4.svg"
-                                            alt="вернуться в начало" class="scrolerup"></a></div>
-                            </div>
-                            <div class="footor_TG"><a href="https://www.google.com/"><img src="img/tggif.gif" alt="TG"
-                                        width="54px" class="round"></a></div>
-                            <div class="back_call">
-                                <a href="Contacts.html" class="back_call button_green">Заказать звонок</a>
-                                <p type="tel">+38 (072) 171-86-91 <br />
-                                    +38 (095) 101-39-09</p>
-                            </div>
+        <!-- Поле для выбора файла -->
+        <label for="file">Выберите файл:</label>
+        <input type="file" id="file" name="file" accept="image/*" required>
 
-                        </div>
-                        <div class="closer"><a href=" © Епифанова А. Д., 2022" class="closer"> © Епифанова А. Д.,
-                                2022</a></div>
-                    </div>
-            </div>
-            </footer>
-        </div>
+        <!-- Кнопка отправки -->
+        <button type="submit">Загрузить</button>
+    </form>
+
+    <!-- Переключатель темы -->
+    <div class="theme-toggle">
+        <label for="theme-switch">Темная тема</label>
+        <div class="theme-switch" id="theme-switch"></div>
     </div>
 
-</body>
+    <script>
+        // Переключение темы
+        const themeSwitch = document.getElementById('theme-switch');
+        const body = document.body;
 
+        // Проверяем сохраненную тему в localStorage
+        const savedTheme = localStorage.getItem('theme');
+        if (savedTheme === 'dark') {
+            body.classList.add('dark-mode');
+            themeSwitch.classList.add('active');
+        }
+
+        // Обработчик клика по переключателю
+        themeSwitch.addEventListener('click', () => {
+            body.classList.toggle('dark-mode');
+            themeSwitch.classList.toggle('active');
+
+            // Сохраняем текущую тему в localStorage
+            if (body.classList.contains('dark-mode')) {
+                localStorage.setItem('theme', 'dark');
+            } else {
+                localStorage.setItem('theme', 'light');
+            }
+        });
+    </script>
+</body>
 </html>
